; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/util/extr_mmal_graph.c_mmal_graph_new_component.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/util/extr_mmal_graph.c_mmal_graph_new_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32** }

@.str = private unnamed_addr constant [35 x i8] c"graph: %p, name: %s, component: %p\00", align 1
@GRAPH_CONNECTIONS_MAX = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [26 x i8] c"no space for component %s\00", align 1
@MMAL_ENOSPC = common dso_local global i64 0, align 8
@MMAL_SUCCESS = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [35 x i8] c"could not create component %s (%i)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mmal_graph_new_component(i32* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = bitcast i32* %11 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %12, %struct.TYPE_2__** %8, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32**, i32*** %7, align 8
  %16 = call i32 @LOG_TRACE(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32* %13, i8* %14, i32** %15)
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @GRAPH_CONNECTIONS_MAX, align 8
  %21 = icmp sge i64 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %3
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 (i8*, i8*, ...) @LOG_ERROR(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  %25 = load i64, i64* @MMAL_ENOSPC, align 8
  store i64 %25, i64* %4, align 8
  br label %56

26:                                               ; preds = %3
  %27 = load i8*, i8** %6, align 8
  %28 = call i64 @mmal_component_create(i8* %27, i32** %9)
  store i64 %28, i64* %10, align 8
  %29 = load i64, i64* %10, align 8
  %30 = load i64, i64* @MMAL_SUCCESS, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %26
  %33 = load i8*, i8** %6, align 8
  %34 = load i64, i64* %10, align 8
  %35 = call i32 (i8*, i8*, ...) @LOG_ERROR(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i8* %33, i64 %34)
  %36 = load i64, i64* %10, align 8
  store i64 %36, i64* %4, align 8
  br label %56

37:                                               ; preds = %26
  %38 = load i32*, i32** %9, align 8
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 1
  %41 = load i32**, i32*** %40, align 8
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = add nsw i64 %44, 1
  store i64 %45, i64* %43, align 8
  %46 = getelementptr inbounds i32*, i32** %41, i64 %44
  store i32* %38, i32** %46, align 8
  %47 = load i32**, i32*** %7, align 8
  %48 = icmp ne i32** %47, null
  br i1 %48, label %49, label %54

49:                                               ; preds = %37
  %50 = load i32*, i32** %9, align 8
  %51 = call i32 @mmal_component_acquire(i32* %50)
  %52 = load i32*, i32** %9, align 8
  %53 = load i32**, i32*** %7, align 8
  store i32* %52, i32** %53, align 8
  br label %54

54:                                               ; preds = %49, %37
  %55 = load i64, i64* @MMAL_SUCCESS, align 8
  store i64 %55, i64* %4, align 8
  br label %56

56:                                               ; preds = %54, %32, %22
  %57 = load i64, i64* %4, align 8
  ret i64 %57
}

declare dso_local i32 @LOG_TRACE(i8*, i32*, i8*, i32**) #1

declare dso_local i32 @LOG_ERROR(i8*, i8*, ...) #1

declare dso_local i64 @mmal_component_create(i8*, i32**) #1

declare dso_local i32 @mmal_component_acquire(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
